# finanzas_cuantitativas

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: hedging_dataset.json  market_data_ingestion.json
course_notes/: README.md
docs/: basic_commands.md
docs/01/: 06H.html
docs/adrs/: README.md
docs/architecture/: implementation_blueprint.md  migration_log.md
docs/datasets/: README.md  data_quality_rules.md  option_contracts.md  phase_0_1_summary_and_phase_2_contracts.md
docs/workflows/: README.md  hedging_dataset_pipeline.md  imports_and_environment.md  local_market_data_pipeline.md  market_data_ingestion.md  phase_2_summary_and_phase_3_thetadata.md  phase_3_summary_and_phase_4_storage_pipeline.md  phase_4_summary_and_phase_5_hedging_pipeline.md
projects/option_hedging/: README.md
scripts/: render_tex.sh
src/01/: NPV.ipynb
src/cuantis_utils/: AssetBehaveSimulation.py  AssetElementaryMetrics.py  AssetVolatilityAnalysis.py  InvestmentValuation.py  Model1HypothesisTester.py  Model2HypothesisTester.py  TestDistribuitions.py  __init__.py  get_prices_options.py
src/modulos/: __init__.py
src/proyect/: AMZN_surface_data.csv  clean_data.ipynb  opction_hedging.ipynb  option_FInalProyecto.ipynb  option_mertonProyecto (1).html
tests/: test_black_scholes_model.py  test_hedging_dataset_pipeline.py  test_market_data_contracts.py  test_market_data_ingestion_pipeline.py  test_option_selection_policy.py  test_sqlite_market_data_repository.py  test_strategy_data_contracts.py  test_thetadata_client.py  test_thetadata_mappers.py
(+77 files in other folders)
